add red color button

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <div style = "margin-bottom: 20px"> Pen Color</div>
             <button class = "changeColor" id = "black">Black</button>
             <button class = "changeColor" id = "blue">Blue</button>
+            <button class = "changeColor" id = "red">Red</button>
         </div>
         <div>
             <button class = "eraseColor">Erase</button>
